fixed text alignment on user show page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,7 +35,6 @@ h2 {
 }
 
 .userShowSection h2 {
-  text-align: left;
   font-weight: 900;
 }
 
